update new resume and projects

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Selina(Yiyang) Xue</a></h1>
-      <h2>I focus on <span>software engineering & AI</span> with a passion for <span>societal impact</span>.</h2>
+      <h1><a href="index.html">Yiyang(Selina) Xue</a></h1>
+      <h2>I specialize in bridging technical systems and organizational strategy through scalable, client-focused software solutions.</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -73,28 +73,27 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
+          <img src="assets/img/profile.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Entry-Level Developer</h3>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Los Angeles, USA</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Irvine, CA</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>yiyangxue.xyy@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(657) 246-7384</span></li>
               </ul>
             </div>
           </div>
           <p>
-            Welcome!
+            Welcome.
           </p>
           <p>
-            I am Yiyang Xue, currently pursuing a Bachelor's degree in Computer Science as a sophomore.
-            The extraordinary world of computer science has captivated me, igniting a profound passion and instilling a sense of limitless creativity within. To me, computer science is not just a subject of study; it's an art form, an exhilarating strategy that empowers one to accomplish almost anything.
+          I’m Yiyang Xue, a junior Computer Science student at the University of California, Irvine.
+          I focus on designing scalable software systems and automation architectures that translate stakeholder goals into structured, executable solutions.
           </p>
           <p class="fst-italic">
-            Let's embark on a journey of collaboration and innovation as we delve into the exciting opportunities that lie ahead!
+            I believe strong systems create clarity, efficiency, and impact — and I’m always interested in building solutions that align technology with real-world objectives.
           </p>
         </div>
       </div>
@@ -105,7 +104,7 @@
     <div class="skills container">
 
       <div class="section-title">
-        <h2>Skills & Technologies</h2>
+        <h2>Skills</h2>
       </div>
 
       <div class="row skills-content">
@@ -113,14 +112,21 @@
         <div class="col-12">
 
           <div class="progress">
-            <span class="skill">C++, C#, Python, JavaScript, HTML, CSS</span>
+            <span class="skill">Core Engineering: C++, C#, Python, JavaScript, Node.js, Flask, Next.js, PostgreSQL</span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Next.js, Node.js, Flask, PostgreSQL, Bootstrap</span>
+            <span class="skill">Systems & Integration: RESTful APIs, Workflow Automation, Zapier, Mailchimp, Imgix, OAuth, SMTP, Hosting Configuration</span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+
+          <div class="progress">
+            <span class="skill">Systems Thinking & Client Strategy: Requirement Decomposition, System Architecture Planning, User & Data Flow Design, Scalable Automation Design, Stakeholder Requirement Translation, Client Needs Discovery</span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -176,11 +182,11 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Overview</h3>
           <div class="resume-item pb-0">
-            <h4>Selina(Yiyang) Xue</h4>
-            <p><em>Aspiring computer scientist dedicated to advancing in the field, specializing in software development and artificial intelligence. Fueled by a genuine passion for excellence, thrive in collaborative environments while actively pursuing leadership roles and embracing teamwork to achieve success, aiming to bring social impact through continuous endeavors. Demonstrates adaptability, swift learning, and effective contribution, ready to explore new horizons of collaboration and innovation.</em></p>
+            <h4>Yiyang(Selina) Xue</h4>
+            <p><em>Computer science student with experience designing and integrating software systems and automation workflows. Strong foundation in full-stack development and stakeholder collaboration, translating technical requirements into scalable solutions in client-facing environments.</em></p>
             <p>
             <ul>
-              <li>Azusa, CA</li>
+              <li>Irvine, CA</li>
               <li>(657) 246-7384</li>
               <li>yiyangxue.xyy@gmail.com</li>
             </ul>
@@ -190,22 +196,45 @@
           <h3 class="resume-title">Education</h3>
           <!-- Add another resume-item for break point -->
           <div class="resume-item">
-            <h4>Associate of Computer Science</h4>
-            <h5>Fall 2022 - Present</h5>
-            <p><em>Citrus College, Azusa, CA</em></p>
-            <ul>
-              <li>GPA: 4.0</li>
-              <li>Expected Transfer Date: Fall 2025</li>
-            </ul>
+            <h4>Bachelor of Computer Science</h4>
+            <p><em>University of California, Irvine, CA</em></p>
+            <p>Expected Graduation Date: Spring 2027</p>
           </div>
 
           <h3 class="resume-title">Work Experience</h3>
+            <div class="resume-item">
+            <h4>Web Systems Developer</h4>
+            <h5>Gaspare Foundation - Newport Beach, CA — (Hybrid) | Jan 2026 — Present</h5>
+            <p>
+              Humanitarian nonprofit supporting vulnerable communities through outreach and advocacy initiatives
+            <ul>
+              <li>Led website customization and structured content architecture based on stakeholder requirements.</li>
+              <li>Configured hosting environments and optimized content workflows for scalability.</li>
+              <li>Provided ongoing system enhancements aligned with organizational needs.</li>
+            </ul>
+            </p>
+          </div>
+
+            <div class="resume-item">
+            <h4>Web & Systems Architect</h4>
+            <h5>Our Clean Oceans - Newport Beach, CA — (Hybrid) | May 2025 — Present</h5>
+            <p>
+            <ul>
+              <li>Executed full website migration and architecture redesign to improve membership growth and user flows.</li>
+              <li>Designed automated onboarding and referral tracking workflows using Zapier, Mailchimp, and Google Sheets integrations.</li>
+              <li>Built tiered ambassador referral logic with automated trigger-based email campaigns and milestone rewards.</li>
+              <li>Integrated Imgix to dynamically generate personalized digital badges upon registration.</li>
+              <li>Reduced manual coordination by structuring scalable automation pipelines aligned with leadership goals.</li>
+            </ul>
+            </p>
+          </div>
+
           <div class="resume-item">
             <h4>Software Engineering Intern</h4>
             <h5>Eurek AI - Shanghai, China (Remote) | Dec 2024 — Feb 2025</h5>
             <p>
             <ul>
-              <li>Contributed to <span style="text-decoration: underline;">full-stack system design</span>, supporting scalable feature development across multiple layers.</li>
+              <li>Contributed to full-stack system design, supporting scalable feature development across multiple layers.</li>
               <li>Performed code audits to identify logic flaws, resolve high-impact runtime bugs, and drive targeted optimizations across core modules.</li>
               <li>Integrated and validated RESTful APIs, ensuring reliable service interoperability and efficient data exchange.</li>
             </ul>
@@ -217,7 +246,7 @@
             <h5>The Gaia Project - Nonprofit Initiative (Remote) | Jun 2024 — Present</h5>
             <p>
             <ul>
-              <li>Serving as the <span style="text-decoration: underline;">sole web developer, collaborating closely with founders</span> to deliver a website that promotes gender equity and supports female entrepreneurs globally by providing resources, creating collaborative spaces, and amplifying female presence in business.</li>
+              <li>Serving as the sole web developer, collaborating closely with founders to deliver a website that promotes gender equity and supports female entrepreneurs globally by providing resources, creating collaborative spaces, and amplifying female presence in business.</li>
               <li>Utilizing HTML, CSS, JavaScript, Bootstrap, and Node.js to construct a responsive and engaging platform tailored to the strategic goals of the organization.</li>
               <li>Engaging in regular strategy meetings with co-founders to ensure project alignment with organizational goals and effective translation of vision into a functional digital experience.</li>
               <li>Enhancing professional skills in stakeholder communication, delivering tailored digital solutions that meet specific project requirements and expectations.</li>
@@ -232,7 +261,7 @@
             <ul>
               <li>Deepening enthusiasm in social impact and contributions to society.</li>
               <li>Actively participated in regular project meetings to provide progress updates, collaborating with the development team to implement various features using <span style="text-decoration: underline;">Flutter</span>.</li>
-              <li>Strengthening understanding of software architectures and development processes while <span style="text-decoration: underline;">collaborating with senior software developers and tech leads</span>.</li>
+              <li>Strengthening understanding of software architectures and development processes while collaborating with senior software developers and tech leads.</li>
               <li>Utilizing Git & GitHub for version control and open-source development, alongside coordination tools such as Slack and Notion to optimize project workflow.</li>
             </ul>
             </p>
@@ -246,18 +275,7 @@
             <h5>AI Finance Advisor  (Aug 2024)</h5>
             <p>
             <ul>
-              <li>Integrated the trained <b>AI-powered backend</b> with <b>Flask</b> and <b>Next.js</b>, facilitating seamless communication between the AI model and the user interface for real-time financial analysis.</li>
-              <li>Collaborated with UI/UX designers to implement dynamic user interfaces using Next.js, enhancing user interaction and experience.</li>
-            </ul>
-            </p>
-          </div>
-          
-          <div class="resume-item">
-            <h4>FinAID</h4>
-            <h5>AI Finance Advisor  (Aug 2024)</h5>
-            <p>
-            <ul>
-              <li>Integrated the trained <b>AI-powered backend</b> with <b>Flask</b> and <b>Next.js</b>, facilitating seamless communication between the AI model and the user interface for real-time financial analysis.</li>
+              <li>Integrated the trained AI-powered backend with Flask and Next.js, facilitating seamless communication between the AI model and the user interface for real-time financial analysis.</li>
               <li>Collaborated with UI/UX designers to implement dynamic user interfaces using Next.js, enhancing user interaction and experience.</li>
             </ul>
             </p>
@@ -268,10 +286,10 @@
             <h5>Advanced Productivity App  (Jul 2024)</h5>
             <p>
             <ul>
-              <li>Implemented <b>PostgreSQL</b> for safety data manipulation, allowing users to access and visualize their productivity statistics and histories efficiently.</li>
-              <li>Integrated <b>OAuth</b> with <b>Flask-Login</b> to ensure secure user authentication and protect sensitive information.</li>
-              <li>Developed the Pomodoro timer with <b>JavaScript</b>, featuring dynamic background changes, sound cues for session transitions, and interactive particle effects using particles.js for a more engaging user experience.</li>
-              <li>Employed <b>SMTP</b> for automated email communications, enhancing customer support with timely notifications and responses.</li>
+              <li>Implemented PostgreSQL for safety data manipulation, allowing users to access and visualize their productivity statistics and histories efficiently.</li>
+              <li>Integrated OAuth with Flask-Login to ensure secure user authentication and protect sensitive information.</li>
+              <li>Developed the Pomodoro timer with JavaScript, featuring dynamic background changes, sound cues for session transitions, and interactive particle effects using particles.js for a more engaging user experience.</li>
+              <li>Employed SMTP for automated email communications, enhancing customer support with timely notifications and responses.</li>
             </ul>
             </p>
           </div>
@@ -281,7 +299,7 @@
             <h5>Real-Time Stock Monitoring & Analysis  (Mar 2024)</h5>
             <p>
             <ul>
-              <li>Provided <b>daily updates</b> on market trends and timely news articles using <b>Alpha Vantage API</b> and <b>News API</b>.</li>
+              <li>Provided daily updates on market trends and timely news articles using Alpha Vantage API and News API.</li>
               <li>Delivered in-depth company insights and developed an intuitive interface for streamlined stock searches.</li>
             </ul>
             </p>
@@ -292,8 +310,8 @@
             <h5>Efficient Media Data Management  (Nov 2023)</h5>
             <p>
             <ul>
-              <li>Utilized <b>OMDb API</b> for automated retrieval of movie poster images and release years.</li>
-              <li>Leveraged <b>PostgreSQL</b> database for efficient storage, updating, and deletion of user data.</li>
+              <li>Utilized OMDb API for automated retrieval of movie poster images and release years.</li>
+              <li>Leveraged PostgreSQL database for efficient storage, updating, and deletion of user data.</li>
               <li>Implemented flexible organization with sort options to arrange entries by rating or recency.</li>
             </ul>
             </p>
@@ -326,6 +344,40 @@
       </div>
 
       <div class="row portfolio-container">
+      <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+        <div class="portfolio-wrap">
+          <h5>Gaspare Foundation Official Website</h5>
+          <em>Solution Implementation & Delivery</em>
+          <a href="https://www.gasparefoundation.com/" target="_blank">
+            <img src="assets/img/portfolio/GF.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>TGP Official Website</h4>
+              <p>Web<i class="bi bi-link-45deg"></i></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/GF.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+        <div class="portfolio-wrap">
+          <h5>Our Clean Oceans Official Website</h5>
+          <em>Solution Implementation & Delivery</em>
+          <a href="https://www.ourcleanoceans.org/" target="_blank">
+            <img src="assets/img/portfolio/OCO.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>TGP Official Website</h4>
+              <p>Web<i class="bi bi-link-45deg"></i></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/OCO.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
         <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-app">
           <div class="portfolio-wrap">
             <h5>FinAID</h5>
