updated wording and resume

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Systems Thinking & Client Strategy: Requirement Decomposition, System Architecture Planning, User & Data Flow Design, Scalable Automation Design, Stakeholder Requirement Translation, Client Needs Discovery</span>
+            <span class="skill">Solution Architecture: Requirement Decomposition, System Architecture Planning, User & Data Flow Design, Scalable Automation Design</span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -203,7 +203,7 @@
 
           <h3 class="resume-title">Work Experience</h3>
             <div class="resume-item">
-            <h4>Web Systems Developer</h4>
+            <h4>Technical Solutions Developer</h4>
             <h5>Gaspare Foundation - Newport Beach, CA — (Hybrid) | Jan 2026 — Present</h5>
             <p>
               Humanitarian nonprofit supporting vulnerable communities through outreach and advocacy initiatives
@@ -216,7 +216,7 @@
           </div>
 
             <div class="resume-item">
-            <h4>Web & Systems Architect</h4>
+            <h4>Solutions Architect</h4>
             <h5>Our Clean Oceans - Newport Beach, CA — (Hybrid) | May 2025 — Present</h5>
             <p>
             <ul>
@@ -242,7 +242,7 @@
           </div>
 
           <div class="resume-item">
-            <h4>Product & Web Developer</h4>
+            <h4>Product Systems Developer</h4>
             <h5>The Gaia Project - Nonprofit Initiative (Remote) | Jun 2024 — Present</h5>
             <p>
             <ul>
