update wording & positioning

--- a/index.html
+++ b/index.html
@@ -112,21 +112,21 @@
         <div class="col-12">
 
           <div class="progress">
-            <span class="skill">Core Engineering: C++, C#, Python, JavaScript, Node.js, Flask, Next.js, PostgreSQL</span>
+            <span class="skill">Solutions: Requirement Decomposition, System Architecture Planning, User & Data Flows, Scalable Automation</span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Systems & Integration: RESTful APIs, Workflow Automation, Zapier, Mailchimp, Imgix, OAuth, SMTP, Hosting Configuration</span>
+            <span class="skill">Integration: RESTful APIs, Workflow Automation, Zapier, Mailchimp, Imgix, OAuth, SMTP, Hosting Configuration</span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Solution Architecture: Requirement Decomposition, System Architecture Planning, User & Data Flow Design, Scalable Automation Design</span>
+            <span class="skill">Technical: C++, C#, Python, JavaScript, Node.js, Flask, Next.js, PostgreSQL</span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -148,8 +148,8 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="icon-box">
-            <i class="bi bi-people-fill" style="color: #e80368;"></i>
-            <h3>Gender Equity</h3>
+            <i class="bi bi-lightning-fill" style="color: #56ff46;"></i>
+            <h3>Sustainable Development</h3>
           </div>
         </div>
         <div class="col-lg-4">
@@ -160,8 +160,8 @@
         </div>
         <div class="col-lg-4">
           <div class="icon-box">
-            <i class="bi bi-lightning-fill" style="color: #56ff46;"></i>
-            <h3>Sustainable Development</h3>
+            <i class="bi bi-people-fill" style="color: #e80368;"></i>
+            <h3>Gender Equity</h3>
           </div>
         </div>
 
@@ -183,7 +183,7 @@
           <h3 class="resume-title">Overview</h3>
           <div class="resume-item pb-0">
             <h4>Yiyang(Selina) Xue</h4>
-            <p><em>Computer science student with experience designing and integrating software systems and automation workflows. Strong foundation in full-stack development and stakeholder collaboration, translating technical requirements into scalable solutions in client-facing environments.</em></p>
+            <p><em>Technical solutions background in designing scalable system architectures and workflow automation across organizational platforms. Experienced in requirement discovery, solution design, and implementation aligned with operational efficiency and growth objectives.</em></p>
             <p>
             <ul>
               <li>Irvine, CA</li>
@@ -196,7 +196,7 @@
           <h3 class="resume-title">Education</h3>
           <!-- Add another resume-item for break point -->
           <div class="resume-item">
-            <h4>Bachelor of Computer Science</h4>
+            <h4>Bachelor of Computer Science, Information Specialization</h4>
             <p><em>University of California, Irvine, CA</em></p>
             <p>Expected Graduation Date: Spring 2027</p>
           </div>
@@ -206,11 +206,11 @@
             <h4>Technical Solutions Developer</h4>
             <h5>Gaspare Foundation - Newport Beach, CA — (Hybrid) | Jan 2026 — Present</h5>
             <p>
-              Humanitarian nonprofit supporting vulnerable communities through outreach and advocacy initiatives
             <ul>
-              <li>Led website customization and structured content architecture based on stakeholder requirements.</li>
-              <li>Configured hosting environments and optimized content workflows for scalability.</li>
-              <li>Provided ongoing system enhancements aligned with organizational needs.</li>
+              <li>Translated stakeholder objectives into structured web architecture for a 22-page platform.</li>
+              <li>Led requirements discussions and executed end-to-end platform customization.</li>
+              <li>Managed hosting configuration to ensure reliable deployment and maintainability.</li>
+              <li>Delivered iterative updates aligned with evolving organizational priorities.</li>
             </ul>
             </p>
           </div>
@@ -220,11 +220,10 @@
             <h5>Our Clean Oceans - Newport Beach, CA — (Hybrid) | May 2025 — Present</h5>
             <p>
             <ul>
-              <li>Executed full website migration and architecture redesign to improve membership growth and user flows.</li>
-              <li>Designed automated onboarding and referral tracking workflows using Zapier, Mailchimp, and Google Sheets integrations.</li>
-              <li>Built tiered ambassador referral logic with automated trigger-based email campaigns and milestone rewards.</li>
-              <li>Integrated Imgix to dynamically generate personalized digital badges upon registration.</li>
-              <li>Reduced manual coordination by structuring scalable automation pipelines aligned with leadership goals.</li>
+              <li>Defined and led platform redesign aligned with membership growth objectives.</li>
+              <li>Designed automated onboarding workflows using Zapier and Mailchimp integrations.</li>
+              <li>Developed multi-level referral logic with milestone-based rewards and trigger-driven campaigns.</li>
+              <li>Centralized operational data into real-time dashboards, eliminating manual coordination.</li>
             </ul>
             </p>
           </div>
@@ -246,10 +245,9 @@
             <h5>The Gaia Project - Nonprofit Initiative (Remote) | Jun 2024 — Present</h5>
             <p>
             <ul>
-              <li>Serving as the sole web developer, collaborating closely with founders to deliver a website that promotes gender equity and supports female entrepreneurs globally by providing resources, creating collaborative spaces, and amplifying female presence in business.</li>
-              <li>Utilizing HTML, CSS, JavaScript, Bootstrap, and Node.js to construct a responsive and engaging platform tailored to the strategic goals of the organization.</li>
-              <li>Engaging in regular strategy meetings with co-founders to ensure project alignment with organizational goals and effective translation of vision into a functional digital experience.</li>
-              <li>Enhancing professional skills in stakeholder communication, delivering tailored digital solutions that meet specific project requirements and expectations.</li>
+              <li>Designed structured web platform to present program initiatives, event workflows, and partnership collaborations.</li>
+              <li>Implemented streamlined one-page navigation to improve content accessibility and user flow.</li>
+              <li>Launched feature updates and optimized site architecture to support SEO and scalability.</li>
             </ul>
             </p>
           </div>
