--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           <h3 class="resume-title">Education</h3>
           <!-- Add another resume-item for break point -->
           <div class="resume-item">
-            <h4>Bachelor of Computer Science, Information Specialization</h4>
+            <h4>Bachelor of Computer Science</h4>
             <p><em>University of California, Irvine, CA</em></p>
             <p>Expected Graduation Date: Spring 2027</p>
           </div>
